force-app/main/default/objects/Travel_Fund_Request__c/Travel_Fund_Request__c.object-meta.xml
<CustomObject>
    <label>Travel Fund Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Fund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>