force-app/main/default/objects/Travel_Fund_Request__c/fields/Accepted_Scholarship_Attend_the_event__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Scholarship_Attend_the_event__c</fullName>
    <label>Accepted Scholarship/Attend the event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>