force-app/main/default/objects/Travel_Fund_Request__c/fields/Accommodations_paid_by__c.field-meta.xml
<CustomField>
    <fullName>Accommodations_paid_by__c</fullName>
    <label>Accommodations paid by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Delegate Company</fullName>
            </value>
            <value>
                <fullName>Linux Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>