force-app/main/default/objects/Travel_Fund_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>mailing_Address1__c +  BR() +
mailing_Address_2__c +  BR() +
Event_City__c + BR() +
Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>