force-app/main/default/objects/Travel_Fund_Request__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <summarizedField>Travel_Fund_Request_Line_Item__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Travel_Fund_Request_Line_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Travel_Fund_Request_Line_Item__c.Travel_Fund_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>