force-app/main/default/objects/Travel_Fund_Request__c/fields/Attending_on_behalf_of_a_company__c.field-meta.xml
<CustomField>
    <fullName>Attending_on_behalf_of_a_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attending on behalf of a company</label>
    <type>Checkbox</type>
</CustomField>