force-app/main/default/objects/Travel_Fund_Request__c/fields/Blog_on_event_experience__c.field-meta.xml
<CustomField>
    <fullName>Blog_on_event_experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blog on event experience</label>
    <type>Checkbox</type>
</CustomField>