force-app/main/default/objects/Travel_Fund_Request__c/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Native Computing Foundation</fullName>
            </value>
            <value>
                <fullName>Intel Directed Fund</fullName>
            </value>
            <value>
                <fullName>LF Japan Budget</fullName>
            </value>
            <value>
                <fullName>LF Operating Budget</fullName>
            </value>
            <value>
                <fullName>Open API</fullName>
            </value>
            <value>
                <fullName>Tab Travel Fund</fullName>
            </value>
            <value>
                <fullName>Xen Project</fullName>
            </value>
            <value>
                <fullName>LFOperatingBudget</fullName>
            </value>
            <value>
                <fullName>TabTravelFund</fullName>
            </value>
            <value>
                <fullName>LFJapanBudget</fullName>
            </value>
            <value>
                <fullName>Hyperledger</fullName>
            </value>
            <value>
                <fullName>CloudFoundry.org Foundation, Inc.</fullName>
            </value>
            <value>
                <fullName>Ceph Foundation</fullName>
            </value>
            <value>
                <fullName>LFMarketing</fullName>
            </value>
            <value>
                <fullName>OpenDaylight Project, Inc.</fullName>
            </value>
            <value>
                <fullName>Node.js Foundation</fullName>
            </value>
            <value>
                <fullName>LF Networking</fullName>
            </value>
            <value>
                <fullName>Cloud Foundry</fullName>
            </value>
            <value>
                <fullName>IntelDirectedFund</fullName>
            </value>
            <value>
                <fullName>OpenPOWER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>