force-app/main/default/objects/Travel_Fund_Request__c/fields/CommunityBridge_Status__c.field-meta.xml
<CustomField>
    <fullName>CommunityBridge_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommunityBridge Status</label>
    <type>Checkbox</type>
</CustomField>