force-app/main/default/objects/Travel_Fund_Request__c/fields/Company_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Company_Assistance__c</fullName>
    <label>Company Assistance</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>