force-app/main/default/objects/Travel_Fund_Request__c/fields/Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>Compound_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Event and Contact</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>