force-app/main/default/objects/Travel_Fund_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Travel Fund Requests</relationshipLabel>
    <relationshipName>Travel_Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>