force-app/main/default/objects/Travel_Fund_Request__c/fields/CountryOfBirth__c.field-meta.xml
<CustomField>
    <fullName>CountryOfBirth__c</fullName>
    <label>CountryOfBirth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>