force-app/main/default/objects/Travel_Fund_Request__c/fields/Date_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_approved__c</fullName>
    <label>Date_approved</label>
    <type>Date</type>
</CustomField>