force-app/main/default/objects/Travel_Fund_Request__c/fields/Date_Denied__c.field-meta.xml
<CustomField>
    <fullName>Date_Denied__c</fullName>
    <label>Date Denied</label>
    <type>Date</type>
</CustomField>