force-app/main/default/objects/Travel_Fund_Request__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <label>DateofBirth</label>
    <type>Date</type>
</CustomField>