force-app/main/default/objects/Travel_Fund_Request__c/fields/Diversity__c.field-meta.xml
<CustomField>
    <fullName>Diversity__c</fullName>
    <label>Underrepresented / Marginalized Group ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LGBTQIA+</fullName>
            </value>
            <value>
                <fullName>Woman</fullName>
            </value>
            <value>
                <fullName>Person of Color</fullName>
            </value>
            <value>
                <fullName>Person with Disability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>