force-app/main/default/objects/Travel_Fund_Request__c/fields/Diversity_Or_Need_Based__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Or_Need_Based__c</fullName>
    <label>Diversity vs Need Based</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diversity</fullName>
            </value>
            <value>
                <fullName>Need Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>