force-app/main/default/objects/Travel_Fund_Request__c/fields/Donot_send_Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Donot_send_Approval_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Notifications</label>
    <type>Checkbox</type>
</CustomField>