force-app/main/default/objects/Travel_Fund_Request__c/fields/Estimated_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Line_Total__c</fullName>
    <label>Estimated Line Total</label>
    <summarizedField>Travel_Fund_Request_Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Travel_Fund_Request_Line_Item__c.Travel_Fund_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>