force-app/main/default/objects/Travel_Fund_Request__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Travel Fund Requests</relationshipLabel>
    <relationshipName>Travel_Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>