force-app/main/default/objects/Travel_Fund_Request__c/fields/Event_City__c.field-meta.xml
<CustomField>
    <fullName>Event_City__c</fullName>
    <formula>Event__r.Event_Location_City__c</formula>
    <label>Event City</label>
    <type>Text</type>
</CustomField>