force-app/main/default/objects/Travel_Fund_Request__c/fields/Event_Country__c.field-meta.xml
<CustomField>
    <fullName>Event_Country__c</fullName>
    <formula>TEXT(Event__r.Event_Location_Country__c)</formula>
    <label>Event Country</label>
    <type>Text</type>
</CustomField>