force-app/main/default/objects/Travel_Fund_Request__c/fields/Event_Location_Full__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Full__c</fullName>
    <formula>Event__r.Event_Location_Name__c + BR() +
Event__r.Event_Location_Address__c + BR()+
Event__r.Event_Location_City__c + &quot;, &quot; + Event__r.Event_Location_State__c + &quot; &quot; + Event__r.Event_Location_Zip__c + BR() +
TEXT(Event__r.Event_Location_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Location Full</label>
    <type>Text</type>
</CustomField>