force-app/main/default/objects/Travel_Fund_Request__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <formula>Event__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>