force-app/main/default/objects/Travel_Fund_Request__c/fields/expense_report_cost_c__c.field-meta.xml
<CustomField>
    <fullName>expense_report_cost_c__c</fullName>
    <label>expense_report_cost_c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>