force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Approved_Amount__c</fullName>
    <label>Expensify Approved Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>