force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_ID__c.field-meta.xml
<CustomField>
    <fullName>Expensify_ID__c</fullName>
    <label>Expensify ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>