force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Paid_Amount__c</fullName>
    <label>Expensify Paid Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>