force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Report_Name__c</fullName>
    <label>Expensify Report Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>