force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_Response__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Response__c</fullName>
    <label>Expensify Response</label>
    <type>TextArea</type>
</CustomField>