force-app/main/default/objects/Travel_Fund_Request__c/fields/Expensify_Submitted_amount__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Submitted_amount__c</fullName>
    <label>Expensify Submitted amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>