force-app/main/default/objects/Travel_Fund_Request__c/fields/FirstApprover_Comments__c.field-meta.xml
<CustomField>
    <fullName>FirstApprover_Comments__c</fullName>
    <description>Deprecate</description>
    <label>Czomments</label>
    <type>TextArea</type>
</CustomField>