force-app/main/default/objects/Travel_Fund_Request__c/fields/Hotel_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Accommodations__c</fullName>
    <label>Hotel Accommodations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>