force-app/main/default/objects/Travel_Fund_Request__c/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>