force-app/main/default/objects/Travel_Fund_Request__c/fields/Link_Entered__c.field-meta.xml
<CustomField>
    <fullName>Link_Entered__c</fullName>
    <label>Link Entered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>