force-app/main/default/objects/Travel_Fund_Request__c/fields/mailing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>mailing_Address_2__c</fullName>
    <label>mailing Address 2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>