force-app/main/default/objects/Travel_Fund_Request__c/fields/Non_LFEvent_Location__c.field-meta.xml
<CustomField>
    <fullName>Non_LFEvent_Location__c</fullName>
    <label>Non LFEvent Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>