force-app/main/default/objects/Travel_Fund_Request__c/fields/NonLF_Event__c.field-meta.xml
<CustomField>
    <fullName>NonLF_Event__c</fullName>
    <label>NonLF Event</label>
    <length>250</length>
    <type>Text</type>
</CustomField>