force-app/main/default/objects/Travel_Fund_Request__c/fields/NonLF_Event_EndDate__c.field-meta.xml
<CustomField>
    <fullName>NonLF_Event_EndDate__c</fullName>
    <label>NonLF Event EndDate</label>
    <type>Date</type>
</CustomField>