force-app/main/default/objects/Travel_Fund_Request__c/fields/NonLF_Event_StartDate__c.field-meta.xml
<CustomField>
    <fullName>NonLF_Event_StartDate__c</fullName>
    <label>NonLF Event StartDate</label>
    <type>Date</type>
</CustomField>