force-app/main/default/objects/Travel_Fund_Request__c/fields/Not_Accepted_Scholarship_Attend_event__c.field-meta.xml
<CustomField>
    <fullName>Not_Accepted_Scholarship_Attend_event__c</fullName>
    <label>Not Accepted Scholarship / Attend event</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>