force-app/main/default/objects/Travel_Fund_Request__c/fields/Office_phone__c.field-meta.xml
<CustomField>
    <fullName>Office_phone__c</fullName>
    <label>Office phone</label>
    <type>Phone</type>
</CustomField>