force-app/main/default/objects/Travel_Fund_Request__c/fields/Original_Travel_Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Original_Travel_Fund_Request__c</fullName>
    <label>Original Travel Fund Request</label>
    <type>Date</type>
</CustomField>