force-app/main/default/objects/Travel_Fund_Request__c/fields/Other_Underrepresent__c.field-meta.xml
<CustomField>
    <fullName>Other_Underrepresent__c</fullName>
    <label>Other Underrepresent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>