force-app/main/default/objects/Travel_Fund_Request__c/fields/Previous_Approval__c.field-meta.xml
<CustomField>
    <fullName>Previous_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Approval</label>
    <referenceTo>Travel_Fund_Request__c</referenceTo>
    <relationshipLabel>Travel Fund Requests</relationshipLabel>
    <relationshipName>Travel_Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>