force-app/main/default/objects/Travel_Fund_Request__c/fields/Previously_Received_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Previously_Received_Scholarship__c</fullName>
    <label>Previously Received  Scholarship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>