force-app/main/default/objects/Travel_Fund_Request__c/fields/Provisional_Approval__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisional Approval</label>
    <type>Checkbox</type>
</CustomField>