force-app/main/default/objects/Travel_Fund_Request__c/fields/q01_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>q01_Project_URL__c</fullName>
    <description>URL of project or domain expertise</description>
    <inlineHelpText>URL of project or domain expertise</inlineHelpText>
    <label>Project URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>