force-app/main/default/objects/Travel_Fund_Request__c/fields/q02_Planned_Contributions__c.field-meta.xml
<CustomField>
    <fullName>q02_Planned_Contributions__c</fullName>
    <description>Planned contributions to the Linux &quot;platform&quot; this year</description>
    <inlineHelpText>Planned contributions to the Linux &quot;platform&quot; this year</inlineHelpText>
    <label>Planned Contributions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>