force-app/main/default/objects/Travel_Fund_Request__c/fields/q03_Can_Receive_Funding_From_Org__c.field-meta.xml
<CustomField>
    <fullName>q03_Can_Receive_Funding_From_Org__c</fullName>
    <description>Can you receive funding from your company or organization for this event?</description>
    <inlineHelpText>Can you receive funding from your company or organization for this event?</inlineHelpText>
    <label>Can Receive Funding From Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>