force-app/main/default/objects/Travel_Fund_Request__c/fields/q04_How_Will_This_Help__c.field-meta.xml
<CustomField>
    <fullName>q04_How_Will_This_Help__c</fullName>
    <description>How will this event enable you to contribute to your mainline project and accelerate the use of Linux?
this field was created to support migration there are 3,326 records with data. hiding for now.</description>
    <inlineHelpText>How will this event enable you to contribute to your mainline project and accelerate the use of Linux?</inlineHelpText>
    <label>How Will This Help</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>