force-app/main/default/objects/Travel_Fund_Request__c/fields/Reason_to_attend__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_attend__c</fullName>
    <label>Reason to attend</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>