force-app/main/default/objects/Travel_Fund_Request__c/fields/Reason_to_attend_the_conference__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_attend_the_conference__c</fullName>
    <label>Reason to attend the conference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>