force-app/main/default/objects/Travel_Fund_Request__c/fields/Recipient_Category__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Category__c</fullName>
    <label>Recipient Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>