force-app/main/default/objects/Travel_Fund_Request__c/fields/Register_Event__c.field-meta.xml
<CustomField>
    <fullName>Register_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register Event</label>
    <type>Checkbox</type>
</CustomField>