force-app/main/default/objects/Travel_Fund_Request__c/fields/Request_Approved_plus_2_weeks__c.field-meta.xml
<CustomField>
    <fullName>Request_Approved_plus_2_weeks__c</fullName>
    <formula>Approved_Date__c + 14</formula>
    <label>Request Approved plus 2 weeks</label>
    <type>Date</type>
</CustomField>