force-app/main/default/objects/Travel_Fund_Request__c/fields/Requestor_Key__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Key__c</fullName>
    <description>Requestor Key is the MD5-hash of the Salesforce ID. This is used when the requestor wants to review an existing application and/or upload expenses.</description>
    <externalId>true</externalId>
    <inlineHelpText>Requestor Key is the MD5-hash of the Salesforce ID. This is used when the requestor wants to review an existing application and/or upload expenses.</inlineHelpText>
    <label>Requestor Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>