force-app/main/default/objects/Travel_Fund_Request__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <formula>Event__r.Response_Date__c</formula>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>