force-app/main/default/objects/Travel_Fund_Request__c/fields/Scholarship_from_CNCF__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_from_CNCF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship from CNCF</label>
    <type>Checkbox</type>
</CustomField>