force-app/main/default/objects/Travel_Fund_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Request Approved - Waiting For Expense Report</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Expense Report Received - Waiting Final Approval</fullName>
            </value>
            <value>
                <fullName>Problem With Expense Report</fullName>
            </value>
            <value>
                <fullName>Expense Report Approved</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Transferred to Another Event</fullName>
            </value>
            <value>
                <fullName>Unable to Use Funds</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>ExpenseReportWaitingFinal</fullName>
                <isActive>false</isActive>
                <label>ExpenseReportWaitingFinal</label>
            </value>
            <value>
                <fullName>InitialApproval</fullName>
                <isActive>false</isActive>
                <label>InitialApproval</label>
            </value>
            <value>
                <fullName>Partially Approved</fullName>
                <isActive>false</isActive>
                <label>Partially Approved</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
                <isActive>false</isActive>
                <label>Partially Paid</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>