force-app/main/default/objects/Travel_Fund_Request__c/fields/TFR_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>TFR_Response_Date__c</fullName>
    <formula>IF(Event__r.Response_Date__c &gt; TODAY(),Event__r.Response_Date__c, TODAY()+ 14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TFR Response Date</label>
    <type>Date</type>
</CustomField>