force-app/main/default/objects/Travel_Fund_Request__c/fields/TFREmail__c.field-meta.xml
<CustomField>
    <fullName>TFREmail__c</fullName>
    <label>TFREmail</label>
    <type>Email</type>
</CustomField>