force-app/main/default/objects/Travel_Fund_Request__c/fields/TFRid__c.field-meta.xml
<CustomField>
    <fullName>TFRid__c</fullName>
    <description>This field is created to support Gravity form .</description>
    <label>TFRid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>