force-app/main/default/objects/Travel_Fund_Request__c/fields/Travel_Agency__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency__c</fullName>
    <description>Travel Agent Name we use and pay for this transaction</description>
    <label>Travel Agency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>