force-app/main/default/objects/Travel_Fund_Request__c/fields/TravelFund_Blocklist__c.field-meta.xml
<CustomField>
    <fullName>TravelFund_Blocklist__c</fullName>
    <formula>Contact__r.TravelFund_Blocklist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TravelFund Blocklist</label>
    <type>Checkbox</type>
</CustomField>