force-app/main/default/objects/Travel_Fund_Request__c/fields/TravelFund_Blocklist_Notes__c.field-meta.xml
<CustomField>
    <fullName>TravelFund_Blocklist_Notes__c</fullName>
    <description>Formula from Contact object field</description>
    <formula>Contact__r.TravelFund_Blocklist_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TravelFund Blocklist Notes</label>
    <type>Text</type>
</CustomField>