force-app/main/default/objects/Travel_Fund_Request__c/fields/TravelFundId__c.field-meta.xml
<CustomField>
    <fullName>TravelFundId__c</fullName>
    <formula>Id</formula>
    <label>TravelFundId</label>
    <type>Text</type>
</CustomField>