force-app/main/default/objects/Travel_Fund_Request__c/fields/Travelling_From__c.field-meta.xml
<CustomField>
    <fullName>Travelling_From__c</fullName>
    <label>Travelling From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>