force-app/main/default/objects/Travel_Fund_Request__c/fields/Travelling_To__c.field-meta.xml
<CustomField>
    <fullName>Travelling_To__c</fullName>
    <description>3300 records has data from sugar. hiding for users for now.</description>
    <label>Travelling To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>