force-app/main/default/objects/Travel_Fund_Request__c/fields/Valid_Passport__c.field-meta.xml
<CustomField>
    <fullName>Valid_Passport__c</fullName>
    <label>Valid Passport?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>