force-app/main/default/objects/Travel_Fund_Request__c/fields/Visa_Request__c.field-meta.xml
<CustomField>
    <fullName>Visa_Request__c</fullName>
    <label>Visa Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>