force-app/main/default/objects/Travel_Fund_Request__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>