force-app/main/default/objects/Travel_Fund_Request__c/validationRules/IsStatusRequestApprovedAndAmountSet.validationRule-meta.xml
<ValidationRule>
    <fullName>IsStatusRequestApprovedAndAmountSet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c ,&apos;Request Approved - Waiting For Expense Report&apos;),OR(NOT(Amount_Approved__c &gt; 0),ISBLANK(Amount_Approved__c)))</errorConditionFormula>
    <errorMessage>Kindly fill the Approved amount.</errorMessage>
</ValidationRule>