force-app/main/default/objects/Travel_Fund_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget_Type__c</columns>
    <columns>Estimated_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Since_Last_Status_Change__c</columns>
    <columns>Event__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Previous_Approval__c</columns>
    <columns>Previously_Received_Scholarship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>